# dictaclutch

./: .gitignore  CLAUDE.md  LICENSE  README.md  STREAMING_IMPLEMENTATION_PLAN.md  pyproject.toml  requirements.txt  run.bat  run.sh  setup.bat  setup.sh  test.bat  test_hotkeys.py  voice_input.py
.claude/: settings.local.json
scripts/: run.bat  run.sh  setup.bat  setup.sh
src/dictaclutch/: __init__.py  __main__.py  app.py  config.py
src/dictaclutch/audio/: __init__.py  feedback.py  noise.py  recorder.py
src/dictaclutch/hotkeys/: __init__.py  diagnostic.py  handler.py
src/dictaclutch/input/: __init__.py  keyboard_linux.py  keyboard_win.py  text_output.py
src/dictaclutch/transcription/: __init__.py  buffer.py  streaming.py  transcriber.py
tests/: __init__.py  conftest.py
tests/test_audio/: __init__.py
tests/test_hotkeys/: __init__.py
tests/test_input/: __init__.py
tests/test_transcription/: __init__.py
